5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1674_1100.log
== TEST (2019-04-25 21:57:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: "))
animal = y 
print("Entrada",x)
if(x=2):
	y = "Tartaruga"
elif(x = 5):
	y = "Garca"
elif(x = 10):
	y = "Arara"
elif(x = 20):
	y = "Mico-leao-dourado"
elif(x = 50):
	y = "Onca-pintada"
elif(x = 100):
	y = "Garoupa"
print("Animal", y)
-- ERROR:
File "XXXX", line 7
    if(x=2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 21:57:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: "))
animal = y 
print("Entrada: ",x)
if(x=2):
	y = "Tartaruga"
elif(x = 5):
	y = "Garca"
elif(x = 10):
	y = "Arara"
elif(x = 20):
	y = "Mico-leao-dourado"
elif(x = 50):
	y = "Onca-pintada"
elif(x = 100):
	y = "Garoupa"
print("Animal: ", y)
-- ERROR:
File "XXXX", line 7
    if(x=2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 21:58:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: "))
animal = y 
print("Entrada: ",x)
if (x = 2):
	y = "Tartaruga"
elif(x = 5):
	y = "Garca"
elif(x = 10):
	y = "Arara"
elif(x = 20):
	y = "Mico-leao-dourado"
elif(x = 50):
	y = "Onca-pintada"
elif(x = 100):
	y = "Garoupa"
print("Animal: ", y)
-- ERROR:
File "XXXX", line 7
    if (x = 2):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 21:58:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: "))
animal = y 
print("Entrada: ",x)
if (x = 2):
	y = "Tartaruga"
elif(x = 5):
	y = "Garca"
elif(x = 10):
	y = "Arara"
elif(x = 20):
	y = "Mico-leao-dourado"
elif(x = 50):
	y = "Onca-pintada"
elif(x = 100):
	y = "Garoupa"
print("Animal: ", y)
-- ERROR:
File "XXXX", line 7
    if (x = 2):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 21:58:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: "))
animal = y 
print("Entrada: ",x)
if(x = 2):
	y = "Tartaruga"
elif(x = 5):
	y = "Garca"
elif(x = 10):
	y = "Arara"
elif(x = 20):
	y = "Mico-leao-dourado"
elif(x = 50):
	y = "Onca-pintada"
elif(x = 100):
	y = "Garoupa"
print("Animal: ", y)
-- ERROR:
File "XXXX", line 7
    if(x = 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 21:59:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: "))
animal = y 
print("Entrada: ",x)
if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Animal: ", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    animal = y 
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 21:59:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: "))
animal = y 
print("Entrada: ",x)
if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Animal: ", animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    animal = y 
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:00:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: "))
animal == y 
print("Entrada: ",x)
if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Animal: ", animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    animal == y 
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:00:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 
print("Entrada: ",x)
if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Animal: ", animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print("Animal: ", animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:00:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 
print("Entrada: ",x)
if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 22:00:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 
print("Entrada: ",x)
if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Animal: ", y)
-- EXECUTION TIME:
0.180528
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:01:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 
print("Entrada: ",x)
if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Animal:", y)
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 22:01:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 
print("Entrada: ",x)
if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Animal:", y)
-- EXECUTION TIME:
0.142106
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:01:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 
print(x)
if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Animal:", y)
-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 22:01:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 
print(x)
if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Animal:", y)
-- EXECUTION TIME:
0.188228
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:02:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 
print("Entrada:",x)
if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:03:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Entrada:",x)
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:03:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Entrada:",x)
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 22:03:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Entrada:",x)
print("Animal:", y)
-- EXECUTION TIME:
0.176166
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 22:03:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Entrada: ",x)
print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 22:03:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Entrada: ",x)
print("Animal: ", y)
-- EXECUTION TIME:
0.169571
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:09:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Entrada: ",x)
else:
	print("Invalido")
print("Animal: ", y)
-- ERROR:
File "XXXX", line 19
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:09:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Entrada: ",x)

else:
	print("Invalido")
print("Animal: ", y)
-- ERROR:
File "XXXX", line 20
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:11:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Entrada: ",x)
else:
	y = "invalido"
print("Animal: ", y)
-- ERROR:
File "XXXX", line 19
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:13:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"
else:
	y = "invalido"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Entrada: ",x)

print("Animal: ", y)
-- ERROR:
File "XXXX", line 10
    elif(x == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:13:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"
else:
	y = "invalido"
	elif(x == 5):
		y = "Garca"
	elif(x == 10):
		y = "Arara"
	elif(x == 20):
		y = "Mico-leao-dourado"
	elif(x == 50):
		y = "Onca-pintada"
	elif(x == 100):
		y = "Garoupa"
print("Entrada: ",x)

print("Animal: ", y)
-- ERROR:
File "XXXX", line 10
    elif(x == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:58:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"

elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Entrada: ",x)
print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:58:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 

if(x == 2):
	y = "Tartaruga"

elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
print("Entrada: ",x)
print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:00:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 
print("Entrada: ",x)

if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
else:
	y = "Invalido"
print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:00:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 
print("Entrada: ",x)

if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
else:
	y = "Invalido"
print("Animal: ", y)
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 11:00:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input(" digite a cedula: ")) 
print("Entrada: ",x)

if(x == 2):
	y = "Tartaruga"
elif(x == 5):
	y = "Garca"
elif(x == 10):
	y = "Arara"
elif(x == 20):
	y = "Mico-leao-dourado"
elif(x == 50):
	y = "Onca-pintada"
elif(x == 100):
	y = "Garoupa"
else:
	y = "Invalido"
print("Animal: ", y)
-- EXECUTION TIME:
0.119222
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
